Create button to add a new Book to the library

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .grid-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(10000, 100px);
+    grid-template-rows: repeat(auto, 100px);
     grid-gap: 10px 10px;
 }
 
@@ -10,3 +10,13 @@
     text-align: center;
     padding: 10px;
 }
+
+#new-book{
+    background-color: bisque;
+    border: 2px solid;
+    padding: 20px;
+    margin: 2em;
+    text-align: center;
+    font-size: 18px;
+}
+
